application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    # Use AWS ALB Ingress Controller
    kubernetes.io/ingress.class: alb
    # External type load balancer
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Target type IP for EKS
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: my-app.your-domain.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: your-app-service
                port:
                  number: 80
